--- a/vs/alloytools1/alloytools1.vcxproj
+++ b/vs/alloytools1/alloytools1.vcxproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\alloytools1\dumper.h" />
+    <ClInclude Include="..\..\src\alloytools1\elf.h" />
     <ClInclude Include="..\..\src\alloytools1\utils.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
